--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>M. Sankara Narayanan</h1>
       <p>B.Tech IT Student | Web Developer | Digital Marketer</p>
     </header>
-    <img src="blob:https://web.whatsapp.com/48ea588a-d8b8-443f-aea8-e2e5baa657dd" alt="Profile Picture" style="width: 150px; border-image: 200%; display: block; margin: 0 auto;">
+    <!-- <img src="blob:https://web.whatsapp.com/48ea588a-d8b8-443f-aea8-e2e5baa657dd" alt="Profile Picture" style="width: 150px; border-image: 200%; display: block; margin: 0 auto;"> -->
     <section class="about">
       <h2>About Me</h2>
       <p>
